2010-12-07  Murray Cumming  <murrayc@murrayc.com>

	Widget, StyleContext: Allow default StyleFlag values.

	* gtk/src/stylecontext.[hg|ccg]: get_color(), get_background_color(),
	get_border_color(), get_padding(), get_margin().
	* gtk/src/widget.[hg|ccg]: override_color(), override_background_color():
	Manually implement these methods so we can rearrange the parameters and then 
	provide a default StateFlags value of 0.
	* demos/gtk-demo/example_colorsel.cc:
	* demos/gtk-demo/example_textview.cc: Adapted.
	
2010-12-07  Murray Cumming  <murrayc@murrayc.com>

	Widget: Added get_style_context().

	* gtk/src/widget.hg: Wrap gtk_widget_get_style_context().

2010-12-07  Murray Cumming  <murrayc@murrayc.com>

	Added CssProvider.

  * gtl/src/filelist.am:
	* gtk/src/cssprovider.[hg|ccg]: Added CssProvider, implementing StyleProvider.
  * gtk/gtkmm.h: Include the new header.
  
2010-12-07  Murray Cumming  <murrayc@murrayc.com>

	Added signals/properties .defs for GtkStyleContext.

	* tools/extra_defs_gen/generate_defs_gtk.cc: Added some new types.
	* gtk/src/gtk_signals.defs: Added the section for GtkStyleContext so that 
	gmmproc can actuall generate the signal and property API for Gtk::StyleContext.
	
2010-12-07  Murray Cumming  <murrayc@murrayc.com>

	Added properties using Gdk::RGBA.

	* gdk/src/color.hg:
	* gtk/src/cellrenderer.hg:
	* gtk/src/cellrenderertext.hg:
	* gtk/src/cellview.hg:
	* gtk/src/colorbutton.hg:
	* gtk/src/texttag.hg: Added the new properties that take a Gdk::RGBA instead 
	of Gdk::Color. We can remove Gdk::Color when it has been deprecated in 
	GTK+ 3:
	https://bugzilla.gnome.org/show_bug.cgi?id=636695

2010-12-07  Murray Cumming  <murrayc@murrayc.com>>

	Fix Gdk::RGBA and fix the demos build (make check)

	* gdk/src/rgba.[hg|ccg]: Change set_rgb() to set_rgba(), adding an optional 
	alpha parameter.
  Change set_rgb_p() to set_rgba_p(), adding an optional 
	alpha parameter.