@@ -1,5 +1,11 @@
 2010-12-07  Murray Cumming  <murrayc@murrayc.com>
 
+	Added Gdk::Cairo::set_source_rgba().
+
+	* gdk/gdkmm/general.[h|cc]: Wrapped gdk_cairo_set_source_rgba().
+
+2010-12-07  Murray Cumming  <murrayc@murrayc.com>
+
 	Widget, StyleContext: Allow default StyleFlag values.
 
 	* gtk/src/stylecontext.[hg|ccg]: get_color(), get_background_color(),
